feat: add auth and storage flow
